fixing form on safari

--- a/app/assets/stylesheets/main/modules/_modal.scss
+++ b/app/assets/stylesheets/main/modules/_modal.scss
@@ -200,7 +200,7 @@
   .field.small {
     width: auto;
 
-    & + .field { margin-left: 40px; }
+    & + .field { margin-left: 38px; }
   }
 
   .field.small input {
